--- a/WebAppSample.html
+++ b/WebAppSample.html
@@ -13,7 +13,7 @@
                 WEB APPS LIST
             </div>
             <nav>
-                <i class="fas fa-home" style="color: #3e516e;"></i> <a href="Home.html">Home</a>
+                <i class="fas fa-home" style="color: #3e516e;"></i> <a href="index.html">Home</a>
                 <i class="fas fa-file" style="color: #3e516e;"></i> <a href="resume.html">Resume</a>
                 <i class="fab fa-uncharted" style="color: #3e516e;"></i> <a href="WebAppSample.html">Wep App</a>
                 <i class="fas fa-plug" style="color: #3e516e;"></i> <a href="OtherSample.html">E-commerce Plugin</a>
