--- a/OtherSample.html
+++ b/OtherSample.html
@@ -21,7 +21,7 @@
         </header>
         <main>
             <section class="onecontainer">
-                <h2>Sofortig: Australia Dropship<br><img src="Images/Optimized/Icons/Dropshipzone_AUS.png" width="165px" height="78px" alt="Dropshipzone"></h2>
+                <h2>Sofortig: Australia Dropship<br><img src="Images/Optimized/Icons/Dropshipzone_AUS.png" width="165" height="78" alt="Dropshipzone"></h2>
                 <aside>
                     Sync your Dropshipzone account with Sofortig. Powered by Australia's leading B2B2C marketplace.
                     <ul class="fa-ul">
@@ -32,13 +32,12 @@
                     </ul>
                 </aside>
                 <figure>
-                    <a href="https://apps.shopify.com/newaim_app"><img src="Images/Optimized/dropshipping.png" width="630px" height="345px" alt="Dropshipzone"></a>
+                    <a href="https://apps.shopify.com/newaim_app"><img src="Images/Optimized/dropshipping.png" width="630" height="345" alt="Dropshipzone"></a>
                     <figcaption>Profit making Dropshipzone with good turnover</figcaption>
                 </figure>
             </section>
-            <!-- -------------------------------- -->
             <section class="onecontainer">
-                <h2>Ced Commerce Integration<br><img src="Images/Optimized/Icons/CEDCOM.png" width="165px" height="78px" alt="CedCommerce"></h2>
+                <h2>Ced Commerce Integration<br><img src="Images/Optimized/Icons/CEDCOM.png" width="165" height="78" alt="CedCommerce"></h2>
                 <aside>
                     The Trust and the belief our product earns from you is the biggest investment for us..
                     <ul class="fa-ul">
@@ -54,9 +53,8 @@
                     <figcaption>Best ever Integration plugin for shopify customers</figcaption>
                 </figure>
             </section>
-            <!-- -------------------------------- -->
             <section class="onecontainer">
-                <h2>Dropshipping.ced integration<br><img src="Images/Optimized/Icons/DPS-relist.png" width="165px" height="78px" alt="Dropship-relist"></h2>
+                <h2>Dropshipping.ced integration<br><img src="Images/Optimized/Icons/DPS-relist.png" width="165" height="78" alt="Dropship-relist"></h2>
                 <aside>
                     Shopify Aliexpress Dropshipping
                     Automate your Shopify store and keep your Dropshipping Business Thriving on AliExpress
@@ -81,9 +79,9 @@
                 cs.hriengajjar@gmail.com
             </address>
             <div class="socials">
-                <i class="fab fa-facebook fa-2x"></i>
-                <i class="fab fa-twitter fa-2x"></i>
-                <i class="fab fa-instagram fa-2x"></i>
+                <a href="https://www.facebook.com/cs.hirengajjar"><i class="fab fa-facebook fa-2x" style="color: #19b81c;"></i></a>
+                <a href="https://twitter.com/home"><i class="fab fa-twitter fa-2x" style="color: #1da1f2;"></i></a>
+                <a href="https://www.instagram.com/hiren_gajjar/"><i class="fab fa-instagram fa-2x" style="color: #da3e5c;"></i></a>
             </div>
         </footer>
     </body>
