--- a/WebAppSample.html
+++ b/WebAppSample.html
@@ -21,9 +21,8 @@
         </header>
         
         <main>
-            <!-- -------------------------------- -->
             <section class="onecontainer">
-                <h2>LAMP<br>(software bundle)<br><img src="Images/Optimized/Icons/LAMP-tiny.png" width="165px" height="78px" alt="LAMP"></h2>
+                <h2>LAMP<br>(software bundle)<br><img src="Images/Optimized/Icons/LAMP-tiny.png" width="165" height="78" alt="LAMP"></h2>
                 <aside>
                     LAMP (Linux, Apache, MySQL, PHP/Perl/Python) is an acronym denoting one of the most common software stacks for many of the web's most popular applications. However, LAMP now refers to a generic software stack model and its components are largely interchangeable.[1]<br><br>
                     Each letter in the acronym stands for one of its four open-source building blocks:
@@ -40,9 +39,8 @@
                     <figcaption>A high-level overview of LAMP's building blocks and overall system environment</figcaption>
                 </figure>
             </section>
-            <!-- -------------------------------- -->
             <section class="onecontainer">
-                <h2>Monday<br>Work Mgt.<br><img src="Images/Optimized/Icons/mondayicon.png" width="165px" height="100px" alt="mondaydotcom"></h2>
+                <h2>Monday<br>Work Mgt.<br><img src="Images/Optimized/Icons/mondayicon.png" width="165" height="100" alt="mondaydotcom"></h2>
                 <aside class="asidestyle">
                     Work smarter with the #1 task management platform<br>
                     Plan, manage and track all your team's tasks in one flexible platform.<br><br>
@@ -61,37 +59,41 @@
                     </ul>
                 </aside>
                 <figure>
-                    <a href="https://monday.com/lp/task-management?cq_src=google_ads&cq_cmp=957916517&cq_term=task%20manager&cq_plac=&cq_net=g&cq_plt=gp&utm_medium=cpc&utm_source=adwordssearch&utm_campaign=ca-en-prm-workos-work_mgmt-task_management-h-search-desktop-core-aw&utm_keyword=task%20manager&utm_match_type=p&cluster=generic&subcluster=&ati=&utm_adgroup=task%20manager&utm_banner=358286763508&gad_source=1&gclid=CjwKCAiApaarBhB7EiwAYiMwqscO3W5uNq5UcaNFCYtGxQwUjBZAtf59b65bASdWTpptNLUcV6hP7RoCAwUQAvD_BwE"><img src="Images/Optimized/monday work management.png" width="630" height="345" alt="collaborate"></a>
+                    <a href="https://monday.com/lp/task-management?cq_src=google_ads&cq_cmp=957916517&cq_term=task%20manager&cq_plac=&cq_net=g&cq_plt=gp&utm_medium=cpc&utm_source=adwordssearch&utm_campaign=ca-en-prm-workos-work_mgmt-task_management-h-search-desktop-core-aw&utm_keyword=task%20manager&utm_match_type=p&cluster=generic&subcluster=&ati=&utm_adgroup=task%20manager&utm_banner=358286763508&gad_source=1&gclid=CjwKCAiApaarBhB7EiwAYiMwqscO3W5uNq5UcaNFCYtGxQwUjBZAtf59b65bASdWTpptNLUcV6hP7RoCAwUQAvD_BwE"><img src="Images/Optimized/monday_work_opti.png" width="630" height="345" alt="collaborate"></a>
                     <figcaption>Assign tasks, collaborate, and notify teammates on status changes - all in real-time. Close the feedback loop, faster.</figcaption>
                 </figure>
             </section>
-            <!-- -------------------------------- -->
             <section class="onecontainer">
-                <h2>ASP.NET Core<br><img src="Images/Optimized/Icons/ASPDOTNET-opti.png" width="165px" height="100px" alt="ASPDOTNET-opti"> </h2>
+                <h2>ASP.NET Core<br><img src="Images/Optimized/Icons/ASPDOTNET-opti.png" width="165" height="100" alt="ASPDOTNET-opti"> </h2>
                 <aside>
                     Free. Cross-platform. Open source.
                     A framework for building web apps and services with .NET and C#.<br>
                     <ul class="fa-ul">
-                        <li><span class="fa-li"><i class="fas fa-th-large" style="color: #1f1f1f;"></i></span>Interactive web UI with C#</li>
-                        <ul class="fa-ul">
-                            <li><span class="fa-li"><i class="fas fa-code" style="color: #88950f;"></i></span>Blazor is a feature of ASP.NET Core for building interactive web UIs using C# instead of JavaScript.</li>
-                        </ul>
-                        <li><span class="fa-li"><i class="fas fa-globe" style="color: #1f1f1f;"></i></span>Web Apps</li>
-                        <ul class="fa-ul">
-                            <li><span class="fa-li"><i class="fas fa-code" style="color: #88950f;"></i></span>full stack web apps with HTML, CSS, and c#</li>
-                        </ul>
-                        <li><span class="fa-li"><i class="fas fa-link" style="color: #1f1f1f;"></i></span>APIs</li>
-                        <ul class="fa-ul">
-                            <li><span class="fa-li"><i class="fas fa-code" style="color: #88950f;"></i></span>Develop REST APIs for a range of clients, including browsers and mobile devices.</li>
-                        </ul>
-                        <li><span class="fa-li"><i class="fas fa-podcast" style="color: #1f1f1f;"></i></span>Real-Time</li>
-                        <ul class="fa-ul">
-                            <li><span class="fa-li"><i class="fas fa-code" style="color: #88950f;"></i></span>Enable bi-directional communication between server and client, in real-time.</li>
-                        </ul>
-                        <li><span class="fa-li"><i class="fas fa-cubes" style="color: #1f1f1f;"></i></span>Microservices</li>
-                        <ul class="fa-ul">
-                            <li><span class="fa-li"><i class="fas fa-code" style="color: #88950f;"></i></span>Create Independently deploable microservices that run on Docker containers</li>
-                        </ul>
+                        <li><span class="fa-li"><i class="fas fa-th-large" style="color: #1f1f1f;"></i></span>Interactive web UI with C#
+                            <ul class="fa-ul">
+                                <li><span class="fa-li"><i class="fas fa-code" style="color: #88950f;"></i></span>Blazor is a feature of ASP.NET Core for building interactive web UIs using C# instead of JavaScript.</li>
+                            </ul>
+                        </li>
+                        <li><span class="fa-li"><i class="fas fa-globe" style="color: #1f1f1f;"></i></span>Web Apps
+                            <ul class="fa-ul">
+                                <li><span class="fa-li"><i class="fas fa-code" style="color: #88950f;"></i></span>full stack web apps with HTML, CSS, and c#</li>
+                            </ul>
+                        </li>
+                        <li><span class="fa-li"><i class="fas fa-link" style="color: #1f1f1f;"></i></span>APIs
+                            <ul class="fa-ul">
+                                <li><span class="fa-li"><i class="fas fa-code" style="color: #88950f;"></i></span>Develop REST APIs for a range of clients, including browsers and mobile devices.</li>
+                            </ul>
+                        </li>
+                        <li><span class="fa-li"><i class="fas fa-podcast" style="color: #1f1f1f;"></i></span>Real-Time
+                            <ul class="fa-ul">
+                                <li><span class="fa-li"><i class="fas fa-code" style="color: #88950f;"></i></span>Enable bi-directional communication between server and client, in real-time.</li>
+                            </ul>
+                        </li>
+                        <li><span class="fa-li"><i class="fas fa-cubes" style="color: #1f1f1f;"></i></span>Microservices
+                            <ul class="fa-ul">
+                                <li><span class="fa-li"><i class="fas fa-code" style="color: #88950f;"></i></span>Create Independently deploable microservices that run on Docker containers</li>
+                            </ul>
+                        </li>
                     </ul>
                 </aside>
                 <figure>
@@ -99,9 +101,8 @@
                     <figcaption>Blazor gives you real .NET running in the browser on WebAssembly.</figcaption>
                 </figure>
             </section>
-            <!-- -------------------------------- -->
             <section class="onecontainer">
-                <h2>WIX.com<br><img src="Images/Optimized/Icons/WIX.png" width="165px" height="100px" alt="Wix"></h2>
+                <h2>WIX.com<br><img src="Images/Optimized/Icons/WIX.png" width="165" height="100" alt="Wix"></h2>
                     <aside>
                     Create a website without limits.<br>
                     Create Independently deploable microservices that run on Docker containers.<br><br>
@@ -124,9 +125,8 @@
                     <figcaption>Try Wix. No credit card required.</figcaption>
                 </figure>
             </section>
-            <!-- -------------------------------- -->
             <section class="onecontainer">
-                <h2>PHP<br><img src="Images/Optimized/Icons/PHP_Opti.png" width="165px" height="100px"></h2>
+                <h2>PHP<br><img src="Images/Optimized/Icons/PHP_Opti.png" width="165" height="100" alt="PHP"></h2>
                 <aside>
                     A popular general-purpose scripting language that is especially suited to web development.<br>
                     Fast, flexible and pragmatic, PHP powers everything from your blog to the most popular websites in the world.
@@ -141,9 +141,8 @@
                     <figcaption>PHP 8.3 comes with numerous improvements and new features</figcaption>
                 </figure>
             </section>
-            <!-- -------------------------------- -->
             <section class="onecontainer">
-                <h2>XAMPP<br><img src="Images/Optimized/Icons/XAMPP.png" width="165px" height="120px" alt="XAMPP"></h2>
+                <h2>XAMPP<br><img src="Images/Optimized/Icons/XAMPP.png" width="165" height="120" alt="XAMPP"></h2>
                 <aside>
                     What is XAMPP?<br>
                     <ul class="fa-ul">
@@ -157,9 +156,7 @@
                     <figcaption>XAMPP has been around for more than 10 years - there is a huge community behind it.</figcaption>
                 </figure>
             </section>
-            <!-- -------------------------------- -->
         </main>
-        
         <footer>
             <address>
                 Hiren Software<br>
@@ -169,9 +166,9 @@
                 cs.hriengajjar@gmail.com
             </address>
             <div class="socials">
-                <i class="fab fa-facebook fa-2x"></i>
-                <i class="fab fa-twitter fa-2x"></i>
-                <i class="fab fa-instagram fa-2x"></i>
+                <a href="https://www.facebook.com/cs.hirengajjar"><i class="fab fa-facebook fa-2x" style="color: #19b81c;"></i></a>
+                <a href="https://twitter.com/home"><i class="fab fa-twitter fa-2x" style="color: #1da1f2;"></i></a>
+                <a href="https://www.instagram.com/hiren_gajjar/"><i class="fab fa-instagram fa-2x" style="color: #da3e5c;"></i></a>
             </div>
         </footer>
     </body>
