--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </nav>
             </header>
             <aside class="homeaside">
-                <img src="Images/Optimized/Aside_Skill-removebg-preview (1).png" width="150" height="120"><br>
+                <img src="Images/Optimized/Aside_Skill_OPt.png" width="150" height="120" alt="skills"><br>
                 Passionate e-commerce expert with over 7 years of proven success in driving revenue growth through strategic planning and digital marketing expertise. Proficient in platform management, data-driven decision-making, and adept at staying abreast of industry trends to foster innovation and adaptability.
             </aside>
             <main>
@@ -39,7 +39,7 @@
                         </ul>
                     </div>
                     <div class="image">
-                        <img src="Images/Optimized/Main_page_sample_awesome_font-removebg-preview (1).png" width="600" height="400" alt="sample">
+                        <img src="Images/Optimized/Main_page_opti.png" width="600" height="400" alt="sample">
                     </div>
                 </section>
             </main>
@@ -52,9 +52,9 @@
                     cs.hriengajjar@gmail.com
                 </address>
                 <div class="socials">
-                    <i class="fab fa-facebook fa-2x"></i>
-                    <i class="fab fa-twitter fa-2x"></i>
-                    <i class="fab fa-instagram fa-2x"></i>
+                    <a href="https://www.facebook.com/cs.hirengajjar"><i class="fab fa-facebook fa-2x" style="color: #19b81c;"></i></a>
+                    <a href="https://twitter.com/home"><i class="fab fa-twitter fa-2x" style="color: #1da1f2;"></i></a>
+                    <a href="https://www.instagram.com/hiren_gajjar/"><i class="fab fa-instagram fa-2x" style="color: #da3e5c;"></i></a>
                 </div>
             </footer>
         </div>
